--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,29 +1,35 @@
 shell fish
+shell_integration no-cursor no-title no-sudo
 
-shell_integration no-sudo
-
-font_family Iosevka Term
+font_family Iosevka Extended
+bold_font Iosevka Bold Extended
+italic_font Iosevka Extended Italic
+bold_italic_font Iosevka Bold Extended Italic
+modify_font cell_height 8px
 symbol_map U+f002,U+e27d,U+e271,U+e244,U+e275 Symbols Nerd Font
-font_size 17
+symbol_map 
+font_size 14
 disable_ligatures cursor
 
-mouse_hide_wait 0
+strip_trailing_spaces always
 
 wayland_enable_ime no
+mouse_hide_wait 0
 
-tab_bar_edge top
-tab_bar_style separator
-tab_separator ""
-tab_title_template " {index}:{title} "
-tab_switch_strategy right
+tab_bar_edge        top
+tab_bar_style       powerline
+tab_powerline_style slanted
+tab_title_template  "{index}:{title}"
 
-map ctrl+shift+t new_tab_with_cwd
-# I don't use splits
-map ctrl+shift+enter no_op
+map ctrl+shift+d new_tab_with_cwd
 
-map ctrl+0 change_font_size all 0
-map ctrl+minus change_font_size all -2.0
-map ctrl+plus change_font_size all +2.0
+map ctrl+0 change_font_size current 0
+map ctrl+plus change_font_size current +2.0
+map ctrl+minus change_font_size current -2.0
+
+map ctrl+shift+equal no_op
+map ctrl+shift+plus no_op
+map ctrl+shift+minus no_op
 
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
