--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -4,12 +4,18 @@ general {
 }
 
 listener {
-    timeout = 30
-    on-timeout = brightnessctl -s set 10
+    timeout = 60
+    on-timeout = ~/.config/hypr/scripts/dim_screen.sh
     on-resume = brightnessctl -r
 }
 
 listener {
-    timeout = 900 # 15min
+    timeout = 90
+    on-timeout = hyprctl dispatch dpms off
+    on-resume = hyprctl dispatch dpms on
+}
+
+listener {
+    timeout = 300
     on-timeout = systemctl suspend
 }
