--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,22 +1,11 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-source = ~/.config/hypr/hyprland.d/kanagawa.conf
-
-
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
-monitor=eDP-1,preferred,0x0,2
+monitor=eDP-1,2880x1800@90,0x0,2
+# monitor=desc:LG Electronics LG ULTRAGEAR 102NTZNG9205,preferred,-500x-1440,1
 
 
 ###################
@@ -41,10 +30,9 @@ $menu = rofi -show drun -show-icons
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
-exec-once = dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY
-exec-once = gnome-keyring-daemon --start --components=secrets
-
-exec = ~/.config/hypr/hyprland.d/scripts/autostart.sh
+exec-once = swww-daemon &
+exec-once = waybar &
+exec-once = hypridle &
 
 
 #############################
@@ -55,9 +43,8 @@ exec = ~/.config/hypr/hyprland.d/scripts/autostart.sh
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct
-
 env = GDK_SCALE,2
+
 
 #####################
 ### LOOK AND FEEL ###
@@ -67,27 +54,21 @@ env = GDK_SCALE,2
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3
+    gaps_in = 5
     gaps_out = 10
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb($active_border)
-    col.inactive_border = rgb($border)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    col.active_border = rgb(589ed7)
+    col.inactive_border = rgb(363646)
 
     layout = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 6
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -112,16 +93,16 @@ decoration {
 animations {
     enabled = true
 
-    # See https://wiki.hyprland.org/Configuring/Animations/ for more
+    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = easeOutQuint, 0.22, 1, 0.36, 1
 
-    animation = windows, 1, 5, easeOutQuint, slide
-    animation = border, 1, 10, default
+    animation = windows, 1, 4, easeOutQuint, slide
+    animation = border, 1, 8, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 6, default
-    animation = layers, 1, 2, default
-    animation = workspaces, 1, 5, easeOutQuint
+    animation = workspaces, 1, 4, easeOutQuint
+    animation = layers, 1, 3, easeOutQuint
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -131,18 +112,16 @@ master {
     new_on_top = true
 }
 
-xwayland {
-    force_zero_scaling = true
-}
-
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    disable_hyprland_logo = true
-    disable_autoreload = true
-    background_color = 0x000000
+    vrr = 1
+    middle_click_paste = false
     focus_on_activate = true
     new_window_takes_over_fullscreen = 2
-    middle_click_paste = false
+}
+
+xwayland {
+    force_zero_scaling = true
 }
 
 
@@ -154,12 +133,12 @@ misc {
 input {
     kb_layout = es
 
-    follow_mouse = 1
+    repeat_rate = 31
 
     accel_profile = flat
 
     touchpad {
-        natural_scroll = yes
+        natural_scroll = true
         tap-to-click = false
         middle_button_emulation = false
         clickfinger_behavior = true
@@ -168,7 +147,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = on
+    workspace_swipe = true
     workspace_swipe_cancel_ratio = 0.15
 }
 
@@ -177,6 +156,7 @@ device {
     accel_profile = adaptive
 }
 
+
 ####################
 ### KEYBINDINGSS ###
 ####################
@@ -184,16 +164,28 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# See https://wiki.hyprland.org/Configuring/Binds/ for more
+# Backlight
+binde = , XF86MonBrightnessUp, exec, brightnessctl -e set +3%
+binde = , XF86MonBrightnessDown, exec, brightnessctl -e set 3%-
+
+# Audio
+binde = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1.0
+binde = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+# General binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
+bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Space, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, F, fullscreen, 0
-bind = $mainMod, P, exec, ~/.config/hypr/hyprland.d/scripts/command_palette.sh
-bind = $mainMod, TAB, exec, rofi -show window -show-icons
 bind = $mainMod, period, exec, rofimoji -r Emojis
+bind = $mainMod, P, exec, ~/.config/hypr/scripts/command_palette.sh
+bind = , Print, exec, grim - | wl-copy
+bind = SHIFT, Print, exec, grim -g "$(slurp -b 00000077 -w 0 || echo)" - | wl-copy
 
 # Master-Layout
 bind = $mainMod, j, layoutmsg, cyclenext
@@ -227,21 +219,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Screenshot
-bind = , Print, exec, grim - | wl-copy
-bind = SHIFT, Print, exec,  grim -g "$(slurp)" - | wl-copy
-
-# Audio
-binde = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1.0
-binde = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-
-# Backlight
-binde = , XF86MonBrightnessUp, exec, brightnessctl -e set +1%
-binde = , XF86MonBrightnessDown, exec, brightnessctl -e set 1%-
-
-# Special workspace (scratchpad)
+# Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
@@ -269,10 +247,4 @@ bindm = $mainMod, mouse:273, resizewindow
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-windowrulev2 = pin, title:^(Picture-in-Picture)$
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = rounding 0, title:^(Picture-in-Picture)$
-
-layerrule = animation slide right, rofi
-
-#source = ~/.config/hypr/hyprland.d/second_monitor.conf
+layerrule = animation popin 95%, rofi
