--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,40 +1,18 @@
-general {
-    ignore_empty_input = true
-}
-
 background {
-    path = ~/Imágenes/Wallpapers/cactus.png
+    path = ~/Imágenes/Wallpapers/shacks.png
 
-    blur_passes = 3
-    blur_size = 2
-    noise = 0.0117
-    contrast = 0.8916
-    brightness = 0.8172
-    vibrancy = 0.1696
-    vibrancy_darkness = 0.0
+    blur_passes = 5
+    brightness = 0.7
+    vibrancy = 0.5
 }
 
 label {
-    text = cmd[update:1000] echo -e "$(date +'%H')"
-    color = rgb(DCD7BA)
+    text = cmd[update:1000] echo -e "$(date +'%H:%M')"
+    color = rgb(c8d3f5)
     font_size = 175
-    font_family = AlfaSlabOne
+    font_family = Inter Bold
 
-    position = 0, -100
-    halign = center
-    valign = top
-
-    shadow_passes = 1
-    shadow_size = 10
-}
-
-label {
-    text = cmd[update:1000] echo -e "$(date +'%M')"
-    color = rgb(DCD7BA)
-    font_size = 175
-    font_family = AlfaSlabOne
-
-    position = 0, -325
+    position = 0, -250
     halign = center
     valign = top
 
@@ -44,11 +22,11 @@ label {
 
 label {
     text = cmd[update:0:1] echo $(date +"%A, %d %B")
-    color = rgb(C8C093)
+    color = rgb(828bb8)
     font_size = 30
-    font_family = Iosevka Semibold
+    font_family = Inter
 
-    position = 0, -625
+    position = 0, -550
     halign = center
     valign = top
 
@@ -56,22 +34,32 @@ label {
     shadow_size = 10
 }
 
+
 input-field {
-    size = 400, 125
-    position = 0, 150
-    valign = bottom
+    size = 300, 100
+    outline_thickness = 3
+    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
+    outer_color = rgb(2f334d)
+    inner_color = rgb(222436)
+    font_color = rgb(c8d3f5)
+    fade_on_empty = true
+    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text =
+    hide_input = false
+    rounding = -1 # -1 means complete rounding (circle/oval)
+    check_color = rgb(ff966c)
+    fail_color = rgb(ff757f) # if authentication failed, changes outer_color and fail message color
     fail_text =
-    outer_color = rgb(363646)
-    inner_color = rgb(1F1F28)
-    font_color = rgb(DCD7BA)
-    check_color = rgb(E6C384)
-    fail_color = rgb(FF5D62)
-    outline_thickness = 2
-    shadow_passes = 1
-    shadow_size = 10
-    shadow_boost = 0.5
-    dots_size = 0.34
-    # dots_rounding = -2
-    # rounding = 24
+    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
+    capslock_color = -1
+    numlock_color = -1
+    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
+    invert_numlock = false # change color if numlock is off
+    swap_font_color = false # see below
+
+    position = 0, 100
+    halign = center
+    valign = bottom
 }
