--- a/config/starship.toml
+++ b/config/starship.toml
@@ -31,7 +31,7 @@ format = '[$status]($style) '
 style = 'bold bright-red'
 
 [character]
-success_symbol = '❱'
-error_symbol = '[❱](bright-red)'
-# success_symbol = '[>](bold)'
-# error_symbol = '[>](bright-red bold)'
+# success_symbol = '❱'
+# error_symbol = '[❱](bright-red)'
+success_symbol = '[>](bold)'
+error_symbol = '[>](bright-red bold)'
