--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,20 +1,18 @@
+# Set fish as config/tmuxlt shell
 set -g default-shell /bin/fish
 
-bind-key -T prefix r source ~/.tmux.conf
+# General
+set -g mouse on
 
-set -g status-position top
-
+# Start with index 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -s escape-time 0
+# Statusbar
+set -g status-position top
+set -g status-style fg=white,bg=black
 
-set -g mouse on
-
-set -g status-bg black
-set -g status-fg white
-
-# Undercurl
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+# Truecolor
+set -g default-terminal ${TERM}
+set -as terminal-overrides ",alacritty*:Tc"
+set -as terminal-overrides ",rio:Tc"
