Update mpv config

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,22 +1,40 @@
-# LENGUAJE ---------------------------------------------------------------------
-alang=ja,jp,jpn,en,eng,spa
-slang=spa,eng
-
-# REPRODUCTOR ------------------------------------------------------------------
+# GENERAL ----------------------------------------------------------------------
 keep-open=yes
 keep-open-pause=no
 save-position-on-quit=yes
 watch-later-options-remove=fullscreen
 watch-later-options-remove=mute
-autofit-larger=75%x85%
-autofit-smaller=50%
+autofit-larger=80%x85%
+autofit-smaller=1280x720
 
-# RENDERIZADO ------------------------------------------------------------------
+# VIDEO ------------------------------------------------------------------------
 vo=gpu-next
-profile=high-quality
-
-deband-iterations=4
-
+gpu-api=vulkan
 video-sync=display-resample
-interpolation=yes
-tscale=oversample
+
+# Calidad insana wazaa 🤪
+profile=high-quality
+glsl-shader=~~/shaders/ravu-zoom-ar-r3.hook
+deband-iterations=4
+deband-range=24
+
+# SUBTITLES --------------------------------------------------------------------
+slang=es,spa,en,eng
+sub-auto=fuzzy
+
+# Tweaks
+sub-ass-vsfilter-blur-compat=no
+subs-with-matching-audio=no
+sub-fix-timing=yes
+demuxer-mkv-subtitle-preroll=yes
+
+# AUDIO ------------------------------------------------------------------------
+alang=ja,jp,jpn,en,eng,es,spa
+volume=100
+volume-max=100
+
+# SCREENSHOTS ------------------------------------------------------------------
+screenshot-sw=yes
+screenshot-format=png
+screenshot-png-compression=1
+screenshot-high-bit-depth=yes
