Update, update, update

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -9,29 +9,29 @@ background {
 label {
     text = cmd[update:1000] echo -e "$(date +'%H:%M')"
     color = rgb(c8d3f5)
-    font_size = 175
-    font_family = Inter Bold
+    font_size = 150
+    font_family = Inter Medium
 
     position = 0, -250
     halign = center
     valign = top
 
-    shadow_passes = 1
-    shadow_size = 10
+    # shadow_passes = 1
+    # shadow_size = 10
 }
 
 label {
     text = cmd[update:0:1] echo $(date +"%A, %d %B")
-    color = rgb(828bb8)
-    font_size = 30
-    font_family = Inter
+    color = rgb(c8d3f5)
+    font_size = 40
+    font_family = Inter Medium
 
-    position = 0, -550
+    position = 0, -500
     halign = center
     valign = top
 
-    shadow_passes = 1
-    shadow_size = 10
+    # shadow_passes = 1
+    # shadow_size = 10
 }
 
 
@@ -59,7 +59,7 @@ input-field {
     invert_numlock = false # change color if numlock is off
     swap_font_color = false # see below
 
-    position = 0, 100
+    position = 0, 200
     halign = center
     valign = bottom
 }
