--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,24 +1,25 @@
-shell fish
-shell_integration no-cursor no-title no-sudo
+shell zsh
+shell_integration no-cursor no-sudo
 
-font_family Iosevka Extended
-bold_font Iosevka Bold Extended
-italic_font Iosevka Extended Italic
-bold_italic_font Iosevka Bold Extended Italic
+font_family JetBrains Mono
 modify_font cell_height 8px
-symbol_map U+f002,U+e27d,U+e271,U+e244,U+e275 Symbols Nerd Font
-symbol_map 
+symbol_map U+f002,U+e27d,U+e271,U+e244,U+e275,U+e256 Symbols Nerd Font
 font_size 14
 disable_ligatures cursor
+undercurl_style thick-sparse
 
+mouse_hide_wait 0
 strip_trailing_spaces always
 
+input_delay 2
+repaint_delay 11
+sync_to_monitor no
 wayland_enable_ime no
-mouse_hide_wait 0
 
 tab_bar_edge        top
-tab_bar_style       powerline
-tab_powerline_style slanted
+tab_bar_align       center
+tab_bar_style       fade
+tab_fade            1
 tab_title_template  "{index}:{title}"
 
 map ctrl+shift+d new_tab_with_cwd
