--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,32 +1,12 @@
-################
-### MONITORS ###
-################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
+# MONITORS: https://wiki.hyprland.org/Configuring/Monitors =====================
 monitor=,preferred,auto,auto
-monitor=eDP-1,2880x1800@90,0x0,2
-# monitor=desc:LG Electronics LG ULTRAGEAR 102NTZNG9205,preferred,-500x-1440,1
 
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
+# PROGRAMS =====================================================================
 $terminal = kitty
 $fileManager = $terminal -e yazi
 $menu = rofi -show drun -show-icons
 
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
+# AUTOSTART ====================================================================
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
@@ -34,43 +14,29 @@ exec-once = swww-daemon &
 exec-once = waybar &
 exec-once = hypridle &
 
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
+# ENV VARIABLES: https://wiki.hyprland.org/Configuring/Environment-variables ===
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GDK_SCALE,2
 
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
+# LOOK AND FEEL ================================================================
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
     gaps_out = 10
 
     border_size = 2
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgb(589ed7)
     col.inactive_border = rgb(363646)
 
     layout = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 0
 
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
@@ -79,7 +45,7 @@ decoration {
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    # wiki: https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = false
         size = 3
@@ -89,12 +55,11 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
+    # wiki: https://wiki.hyprland.org/Configuring/Animations
     bezier = easeOutQuint, 0.22, 1, 0.36, 1
 
     animation = windows, 1, 4, easeOutQuint, slide
@@ -105,14 +70,14 @@ animations {
     animation = layers, 1, 3, easeOutQuint
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+# wiki: https://wiki.hyprland.org/Configuring/Master-Layout
 master {
     new_status = master
     no_gaps_when_only = true
     new_on_top = true
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     vrr = 1
     middle_click_paste = false
@@ -120,16 +85,13 @@ misc {
     new_window_takes_over_fullscreen = 2
 }
 
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#xwayland
 xwayland {
     force_zero_scaling = true
 }
 
-
-#############
-### INPUT ###
-#############
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
+# INPUT ========================================================================
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = es
 
@@ -145,106 +107,88 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
     workspace_swipe_cancel_ratio = 0.15
 }
 
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#per-device-input-config
 device {
     name = asue140d:00-04f3:31b9-touchpad
     accel_profile = adaptive
 }
 
-
-####################
-### KEYBINDINGSS ###
-####################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-# Backlight
-binde = , XF86MonBrightnessUp, exec, brightnessctl -e set +3%
-binde = , XF86MonBrightnessDown, exec, brightnessctl -e set 3%-
-
-# Audio
-binde = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1.0
-binde = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-
-# General binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, Space, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, F, fullscreen, 0
-bind = $mainMod, period, exec, rofimoji -r Emojis
-bind = $mainMod, P, exec, ~/.config/hypr/scripts/command_palette.sh
+# KEYBINDINGS: https://wiki.hyprland.org/Configuring/Binds =====================
+# General binds
+bind = SUPER, Q, exec, $terminal
+bind = SUPER, C, killactive,
+bind = SUPER, M, exit,
+bind = SUPER, E, exec, $fileManager
+bind = SUPER, Space, togglefloating,
+bind = SUPER, R, exec, $menu
+bind = SUPER, F, fullscreen, 0
+bind = SUPER, period, exec, rofimoji -r Emojis
+bind = SUPER, P, exec, ~/.config/hypr/scripts/command_palette.sh
 bind = , Print, exec, grim - | wl-copy
 bind = SHIFT, Print, exec, grim -g "$(slurp -b 00000077 -w 0 || echo)" - | wl-copy
 
 # Master-Layout
-bind = $mainMod, j, layoutmsg, cyclenext
-bind = $mainMod, k, layoutmsg, cycleprev
-bind = $mainMod SHIFT, j, layoutmsg, swapnext
-bind = $mainMod SHIFT, k, layoutmsg, swapprev
-binde = $mainMod, h, resizeactive, -50 0
-binde = $mainMod, l, resizeactive, 50 0
+bind = SUPER, j, layoutmsg, cyclenext
+bind = SUPER, k, layoutmsg, cycleprev
+bind = SUPER SHIFT, j, layoutmsg, swapnext
+bind = SUPER SHIFT, k, layoutmsg, swapprev
+binde = SUPER, h, resizeactive, -50 0
+binde = SUPER, l, resizeactive, 50 0
+
+# Backlight
+binde = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/change_brightness.sh up
+binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/change_brightness.sh down
+
+# Audio
+binde = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/change_volume.sh up
+binde = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/change_volume.sh down
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# Special workspace
+bind = SUPER, S, togglespecialworkspace, magic
+bind = SUPER SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = SUPER, mouse_down, workspace, e+1
+bind = SUPER, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, mouse:273, resizewindow
 
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
+### WINDOWS AND WORKSPACES =====================================================
+# wiki: https://wiki.hyprland.org/Configuring/Window-Rules
+# wiki: https://wiki.hyprland.org/Configuring/Workspace-Rules
+windowrulev2 = suppressevent maximize, class:.*
 layerrule = animation popin 95%, rofi
