--- a/config/kitty/tokyonight_moon.conf
+++ b/config/kitty/tokyonight_moon.conf
@@ -15,8 +15,8 @@ cursor #c8d3f5
 cursor_text_color #222436
 
 # Tabs
-active_tab_background #82aaff
-active_tab_foreground #1e2030
+active_tab_background #394b70
+active_tab_foreground #c8d3f5
 inactive_tab_background #2f334d
 inactive_tab_foreground #545c7e
 
