--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -4,6 +4,7 @@ os:
 gui:
   nerdFontsVersion: "3"
   border: single
+  showBottomLine: false
   spinner:
     rate: 80
     frames:
@@ -26,22 +27,8 @@ gui:
     searchingActiveBorderColor:
     - "#ff966c"
     - "bold"
-    optionsTextColor:
-    - "#82aaff"
     selectedLineBgColor:
     - "#2d3f76"
-    cherryPickedCommitFgColor:
-    - "#82aaff"
-    cherryPickedCommitBgColor:
-    - "#c099ff"
-    markedBaseCommitFgColor:
-    - "#82aaff"
-    markedBaseCommitBgColor:
-    - "#ffc777"
-    unstagedChangesColor:
-    - "#c53b53"
-    defaultFgColor:
-    - "#c8d3f5"
 git:
   paging:
     useConfig: true
