--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -1,19 +1,4 @@
 [manager]
 prepend_keymap = [
-    { on = [
-        "g",
-        "d",
-    ], run = "cd ~/Descargas", desc = "Go to the downloads directory" },
-]
-
-append_keymap = [
-    { on = [
-        "<C-n>",
-    ], run = '''shell 'dragon-drop -x "$@"' --confirm''' },
-    { on = [
-        "?",
-    ], run = "help" },
-    { on = [
-        "T",
-    ], run = "plugin --sync max-preview", desc = "Maximize or restore preview" },
+	{ on = [ "g", "d" ], run = 'cd ~/Descargas', desc = "Go to the downloads directory" },
 ]
