--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -1,10 +1,16 @@
 [manager]
 show_hidden = true
 
-[preview]
-max_width = 1000
-max_height = 1400
-
 [opener]
-edit = [{ run = 'nvim "$@"', block = true }]
-open = [{ run = 'xdg-open "$@"', orphan = true, desc = "Open" }]
+edit = [
+	{ run = 'nvim "$@"', block = true, for = "unix" },
+	{ run = "nvim %*",   block = true, for = "windows" },
+]
+play = [
+	{ run = 'mpv "$@"', orphan = true, for = "unix" },
+	{ run = '"C:\Program Files\mpv.exe" %*', orphan = true, for = "windows" }
+]
+open = [
+    { run = 'xdg-open "$@"', orphan = true, desc = "Open", for ="linux" },
+    { run = "start %*", orphan = true, desc = "Open", for ="windows" }
+]
