--- a/config/wezterm/colors/tokyonight_moon.toml
+++ b/config/wezterm/colors/tokyonight_moon.toml
@@ -5,7 +5,7 @@ cursor_bg = "#c8d3f5"
 cursor_border = "#c8d3f5"
 cursor_fg = "#222436"
 selection_bg = "#2d3f76"
-selection_fg = "#c8d3f5"
+selection_fg = "none"
 split = "#82aaff"
 compose_cursor = "#ff966c"
 scrollbar_thumb = "#2f334d"
