--- a/config/wezterm/colors/tokyonight_moon.toml
+++ b/config/wezterm/colors/tokyonight_moon.toml
@@ -17,8 +17,8 @@ brights = ["#444a73", "#ff8d94", "#c7fb6d", "#ffd8ab", "#9ab8ff", "#caabff", "#b
 background = "#222436"
 
 [colors.tab_bar.active_tab]
-fg_color = "#c8d3f5"
-bg_color = "#394b70"
+fg_color = "#222436"
+bg_color = "#82aaff"
 italic = true
 intensity = "Bold"
 
@@ -27,9 +27,16 @@ bg_color = "#2f334d"
 fg_color = "#828bb8"
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = "#2f334d"
+bg_color = "#3b4261"
 fg_color = "#828bb8"
-intensity = "Bold"
+
+[colors.tab_bar.new_tab]
+bg_color = "#3b4261"
+fg_color = "#828bb8"
+
+[colors.tab_bar.new_tab_hover]
+bg_color = "#545c7e"
+fg_color = "#c8d3f5"
 
 [metadata]
 author = "warbacon"
