--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,27 +1,30 @@
-shell zsh
-shell_integration no-cursor no-sudo
+# Shell
+shell fish
 
-font_family JetBrains Mono
-modify_font cell_height 8px
-symbol_map U+f002,U+e27d,U+e271,U+e244,U+e275,U+e256 Symbols Nerd Font
-font_size 14
+# General
+mouse_hide_wait 0
+strip_trailing_spaces always
+placement_strategy top-left
+
+# Font
+font_family family='Cascadia Code' features=+zero
+modify_font cell_height 10px
+symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font
+font_size 14.4
 disable_ligatures cursor
 undercurl_style thick-sparse
 
-mouse_hide_wait 0
-strip_trailing_spaces always
-
-input_delay 2
-repaint_delay 11
-sync_to_monitor no
+# Performance
 wayland_enable_ime no
 
+# Tabs
 tab_bar_edge        top
 tab_bar_align       center
 tab_bar_style       fade
 tab_fade            1
 tab_title_template  "{index}:{title}"
 
+# Maps
 map ctrl+shift+d new_tab_with_cwd
 
 map ctrl+0 change_font_size current 0
@@ -45,4 +48,5 @@ map alt+0 goto_tab 10
 
 mouse_map alt+left press ungrabbed mouse_selection rectangle
 
+# Theme
 include ./tokyonight_moon.conf
