--- a/config/waybar/river-config.jsonc
+++ b/config/waybar/river-config.jsonc
@@ -3,8 +3,8 @@
     "height": 38,
     "spacing": 6,
     "modules-left": [
-        "hyprland/workspaces",
-        "hyprland/window"
+        "river/tags",
+        "river/window"
     ],
     "modules-right": [
         "privacy",
@@ -15,15 +15,8 @@
         "network",
         "clock"
     ],
-    "hyprland/workspaces": {
-        "show-special": true,
-        "format": "{icon}",
-        "format-icons": {
-            "magic": "✦"
-        }
-    },
-    "hyprland/window": {
-        "separate-outputs": true
+    "river/tags": {
+        "num-tags": 5
     },
     "privacy": {
         "icon-size": 16,
