--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -1,5 +1,11 @@
 [manager]
 show_hidden = true
+sort_by = "natural"
+
+[preview]
+tab_size   = 2
+max_width  = 1000
+max_height = 1000
 
 [opener]
 edit = [
@@ -8,7 +14,7 @@ edit = [
 ]
 play = [
 	{ run = 'mpv "$@"', orphan = true, for = "unix" },
-	{ run = '"C:\Program Files\mpv.exe" %*', orphan = true, for = "windows" }
+	{ run = 'mpv.exe %*', orphan = true, for = "windows" }
 ]
 open = [
     { run = 'xdg-open "$@"', orphan = true, desc = "Open", for ="linux" },
