--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,8 +1,9 @@
 # MONITORS: https://wiki.hyprland.org/Configuring/Monitors =====================
 monitor=,preferred,auto,auto
+monitor=desc:LG Electronics LG ULTRAGEAR 102NTZNG9205,preferred,auto-up,auto
 
 # PROGRAMS =====================================================================
-$terminal = kitty
+$terminal = kitty -1
 $fileManager = $terminal -e yazi
 $menu = rofi -show drun -show-icons
 
@@ -10,14 +11,15 @@ $menu = rofi -show drun -show-icons
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
-exec-once = swww-daemon &
+exec-once = hyprpaper &
 exec-once = waybar &
 exec-once = hypridle &
 
-# ENV VARIABLES: https://wiki.hyprland.org/Configuring/Environment-variables ===
+# ENV VARIABLES ================================================================
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GDK_SCALE,2
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
 # LOOK AND FEEL ================================================================
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#general
@@ -36,51 +38,59 @@ general {
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 0
-
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
     drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 
     # wiki: https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = false
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
     }
+
+    # # https://wiki.hyprland.org/Configuring/Variables/#shadow
+    # shadow = {
+    #     enabled = false
+    # }
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
 
-    # wiki: https://wiki.hyprland.org/Configuring/Animations
-    bezier = easeOutQuint, 0.22, 1, 0.36, 1
+    # wiki: https://wiki.hyprland.org/Configuring/Animations/
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
 
-    animation = windows, 1, 4, easeOutQuint, slide
-    animation = border, 1, 8, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 6, default
-    animation = workspaces, 1, 4, easeOutQuint
-    animation = layers, 1, 3, easeOutQuint
+    animation = global, 1, 10, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 1, 1.94, almostLinear, fade
+    animation = workspacesIn, 1, 1.21, almostLinear, fade
+    animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Master-Layout
 master {
-    new_status = master
-    no_gaps_when_only = true
+    mfact = 0.5
     new_on_top = true
+    new_status = master
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     vrr = 1
-    middle_click_paste = false
+    disable_hyprland_logo = true
     focus_on_activate = true
     new_window_takes_over_fullscreen = 2
 }
@@ -148,8 +158,8 @@ binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/change_brightness.
 # Audio
 binde = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/change_volume.sh up
 binde = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/change_volume.sh down
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/change_volume.sh muteaudio
+bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/change_volume.sh mutemic
 
 # Switch workspaces with mainMod + [0-9]
 bind = SUPER, 1, workspace, 1
@@ -190,5 +200,23 @@ bindm = SUPER, mouse:273, resizewindow
 ### WINDOWS AND WORKSPACES =====================================================
 # wiki: https://wiki.hyprland.org/Configuring/Window-Rules
 # wiki: https://wiki.hyprland.org/Configuring/Workspace-Rules
+
+# Ignore maximize requests from apps.
 windowrulev2 = suppressevent maximize, class:.*
+
+# Fix some dragging issues with XWayland
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Smart gaps
+workspace = w[t1], gapsout:0, gapsin:0
+workspace = w[tg1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
+# Rofi animation
 layerrule = animation popin 95%, rofi
