--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# Set fish as config/tmuxlt shell
+# Shell
 set -g default-shell /bin/fish
 
 # General
@@ -10,9 +10,8 @@ setw -g pane-base-index 1
 
 # Statusbar
 set -g status-position top
-set -g status-style fg=white,bg=black
+set -g status-style fg=white,bg=default
 
 # Truecolor
 set -g default-terminal ${TERM}
 set -as terminal-overrides ",alacritty*:Tc"
-set -as terminal-overrides ",rio:Tc"
