--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -2,31 +2,8 @@
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
 icon_theme=breeze-dark
-standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed="Cascadia Mono,10,-1,5,50,0,0,0,0,0,Regular"
-general="Inter,10,-1,5,50,0,0,0,0,0,Regular"
-
-[Interface]
-activate_item_on_single_click=1
-buttonbox_layout=0
-cursor_flash_time=1000
-dialog_buttons_have_icons=1
-double_click_interval=400
-gui_effects=@Invalid()
-keyboard_scheme=2
-menus_have_icons=true
-show_shortcuts_in_context_menus=true
-stylesheets=/usr/share/qt5ct/qss/fusion-fixes.qss
-toolbutton_style=4
-underline_shortcut=1
-wheel_scroll_lines=3
-
-[SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x5\x9f\0\0\x3]\0\0\0\0\0\0\0\0\0\0\x5\x9f\0\0\x3\x83\0\0\0\0\x2\0\0\0\x5\xa0\0\0\0\0\0\0\0\0\0\0\x5\x9f\0\0\x3])
-
-[Troubleshooting]
-force_raster_widgets=1
-ignored_applications=@Invalid()
+fixed="Monospace,10,-1,5,50,0,0,0,0,0"
+general="Sans Serif,10,-1,5,50,0,0,0,0,0"
