starship: add fill module

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -15,6 +15,7 @@ $hg_branch\
 $python\
 $nix_shell\
 $cmd_duration\
+$fill\
 $line_break\
 $jobs\
 $status\
@@ -46,6 +47,10 @@ detect_files = []
 
 [nix_shell]
 symbol='❄ '
+
+[fill]
+symbol = "-"
+style = "bright-black"
 
 [status]
 disabled = false
