--- a/config/starship.toml
+++ b/config/starship.toml
@@ -49,8 +49,8 @@ detect_files = []
 symbol='❄ '
 
 [fill]
-symbol = "-"
-style = "bright-black"
+symbol = '─'
+style = 'bright-black'
 
 [status]
 disabled = false
@@ -58,5 +58,6 @@ format = '[$status]($style) '
 style = 'bold bright-red'
 
 [character]
-success_symbol = '❱'
-error_symbol = '[❱](bright-red)'
+success_symbol = '❯'
+error_symbol = '[❯](bright-red)'
+vimcmd_symbol = '❮'
