--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -19,7 +19,7 @@
         "show-special": true,
         "format": "{icon}",
         "format-icons": {
-            "magic": "✦"
+            "magic": "󰫢"
         }
     },
     "hyprland/window": {
