--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ exec-once = brightnessctl set 1%-
 exec-once = hyprpaper &
 exec-once = waybar &
 exec-once = hypridle &
+exec-once = wl-clip-persist --clipboard regular &
 
 # ENV VARIABLES ================================================================
 env = XCURSOR_SIZE,24
@@ -29,26 +30,26 @@ general {
 
     border_size = 2
 
-    col.active_border = rgb(589ed7)
-    col.inactive_border = rgb(363646)
+    col.active_border = rgb(27a1b9)
+    col.inactive_border = rgb(292e42)
 
     layout = master
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 0
-    drop_shadow = false
+    rounding = 6
 
     # wiki: https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = false
+        passes = 3
     }
 
-    # # https://wiki.hyprland.org/Configuring/Variables/#shadow
-    # shadow = {
-    #     enabled = false
-    # }
+    # https://wiki.hyprland.org/Configuring/Variables/#shadow
+    shadow {
+        enabled = false
+    }
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -208,15 +209,9 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # Smart gaps
-workspace = w[t1], gapsout:0, gapsin:0
-workspace = w[tg1], gapsout:0, gapsin:0
+workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-
-# Rofi animation
-layerrule = animation popin 95%, rofi
