--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,5 +1,9 @@
+general {
+    ignore_empty_input = true
+}
+
 background {
-    path = ~/Imágenes/Wallpapers/shacks.png
+    path = ~/.config/hypr/wallpaper.png
 
     blur_passes = 5
     brightness = 0.7
@@ -15,9 +19,6 @@ label {
     position = 0, -250
     halign = center
     valign = top
-
-    # shadow_passes = 1
-    # shadow_size = 10
 }
 
 label {
@@ -29,36 +30,20 @@ label {
     position = 0, -500
     halign = center
     valign = top
-
-    # shadow_passes = 1
-    # shadow_size = 10
 }
 
 
 input-field {
-    size = 300, 100
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
+    dots_size = 0.33
     outer_color = rgb(2f334d)
     inner_color = rgb(222436)
     font_color = rgb(c8d3f5)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text =
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
     check_color = rgb(ff966c)
-    fail_color = rgb(ff757f) # if authentication failed, changes outer_color and fail message color
+    fail_color = rgb(ff757f)
     fail_text =
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
 
+    size = 300, 100
     position = 0, 200
     halign = center
     valign = bottom
