--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,9 +7,9 @@ strip_trailing_spaces always
 placement_strategy top-left
 
 # Font
-font_family family='Cascadia Code' features=+zero
+font_family JetBrains Mono
 modify_font cell_height 10px
-symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font
+modify_font strikethrough_position 5px
 font_size 14.4
 disable_ligatures cursor
 undercurl_style thick-sparse
@@ -49,4 +49,4 @@ map alt+0 goto_tab 10
 mouse_map alt+left press ungrabbed mouse_selection rectangle
 
 # Theme
-include ./tokyonight_moon.conf
+include ./Terafox.conf
