--- a/config/kitty/tokyonight_moon.conf
+++ b/config/kitty/tokyonight_moon.conf
@@ -9,7 +9,7 @@
 background #222436
 foreground #c8d3f5
 selection_background #2d3f76
-selection_foreground #c8d3f5
+selection_foreground none
 url_color #4fd6be
 cursor #c8d3f5
 cursor_text_color #222436
