--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,10 +1,14 @@
 # Shell
-set -g default-shell /bin/fish
+set -g default-shell /usr/bin/fish
+
+# Reload
+bind r 'source-file ~/.config/tmux/tmux.conf; display-message "Config reloaded!"'
 
 # General
 set -g mouse on
 
-# Start with index 1
+# Indexes
+set -g renumber-windows on
 set -g base-index 1
 setw -g pane-base-index 1
 
@@ -12,6 +16,26 @@ setw -g pane-base-index 1
 set -g status-position top
 set -g status-style fg=white,bg=default
 
-# Truecolor
-set -g default-terminal ${TERM}
-set -as terminal-overrides ",alacritty*:Tc"
+# Terminal support
+set -s default-terminal "${TERM}"
+set -as terminal-overrides ",*:RGB"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
+# Keys
+set -g mode-keys vi
+
+set -g prefix C-a
+bind-key C-a send-prefix
+unbind C-b
+
+bind-key -n M-1 selectw -t 1
+bind-key -n M-2 selectw -t 2
+bind-key -n M-3 selectw -t 3
+bind-key -n M-4 selectw -t 4
+bind-key -n M-5 selectw -t 5
+bind-key -n M-6 selectw -t 6
+bind-key -n M-7 selectw -t 7
+bind-key -n M-8 selectw -t 8
+bind-key -n M-9 selectw -t 9
+bind-key -n M-0 selectw -t 10
