Terafox and to-NixOS update

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -5,42 +5,44 @@ general {
 background {
     path = ~/.config/hypr/wallpaper.png
 
-    blur_passes = 5
-    brightness = 0.7
-    vibrancy = 0.5
+    brightness = 0.6
+    blur_passes = 4
 }
 
 label {
     text = cmd[update:1000] echo -e "$(date +'%H:%M')"
-    color = rgb(c8d3f5)
+    color = rgb(e6eaea)
     font_size = 150
     font_family = Inter Medium
 
     position = 0, -250
     halign = center
     valign = top
+    shadow_passes = 2
+    shadow_boost = 0.75
 }
 
 label {
     text = cmd[update:0:1] echo $(date +"%A, %d %B")
-    color = rgb(c8d3f5)
+    color = rgb(e6eaea)
     font_size = 40
     font_family = Inter Medium
 
     position = 0, -500
     halign = center
     valign = top
+    shadow_passes = 2
+    shadow_boost = 0.75
 }
-
 
 input-field {
     dots_size = 0.33
-    outer_color = rgb(2f334d)
-    inner_color = rgb(222436)
-    font_color = rgb(c8d3f5)
+    outer_color = rgb(1d3337)
+    inner_color = rgb(152528)
+    font_color = rgb(587b7b)
     placeholder_text =
-    check_color = rgb(ff966c)
-    fail_color = rgb(ff757f)
+    check_color = rgb(fda47f)
+    fail_color = rgb(e85c51)
     fail_text =
 
     size = 300, 100
