--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -9,6 +9,9 @@
     <edit name="family" mode="assign" binding="strong">
       <string>Inter Variable</string>
     </edit>
+    <edit name="family" mode="append" binding="strong">
+      <string>Noto Sans</string>
+    </edit>
   </match>
 
   <!-- Configuración para monospace -->
@@ -19,15 +22,10 @@
     <edit name="family" mode="assign" binding="strong">
       <string>JetBrains Mono</string>
     </edit>
-  </match>
-
-  <!-- Fallback para JetBrains Mono -->
-  <match target="pattern">
-    <test name="family" compare="eq">
-      <string>JetBrains Mono</string>
-    </test>
     <edit name="family" mode="append" binding="strong">
+      <string>Noto Sans Mono</string>
       <string>Symbols Nerd Font</string>
     </edit>
   </match>
 </fontconfig>
+
