--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -8,9 +8,6 @@ $fileManager = $terminal -e yazi
 $menu = rofi -show drun -show-icons
 
 # AUTOSTART ====================================================================
-exec-once = brightnessctl set +1%
-exec-once = brightnessctl set 1%-
-
 exec-once = hyprpaper &
 exec-once = waybar &
 exec-once = hypridle &
@@ -30,8 +27,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgb(27a1b9)
-    col.inactive_border = rgb(292e42)
+    col.active_border = rgb(fda47f)
+    col.inactive_border = rgb(1d3337)
 
     layout = master
 }
@@ -94,6 +91,7 @@ misc {
     disable_hyprland_logo = true
     focus_on_activate = true
     new_window_takes_over_fullscreen = 2
+    background_color = 0x000000
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#xwayland
