Back to tokyonight + big refactoring

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ background {
 
 label {
     text = cmd[update:1000] echo -e "$(date +'%H:%M')"
-    color = rgb(e6eaea)
+    color = rgb(ffffff)
     font_size = 150
     font_family = Inter Medium
 
@@ -24,7 +24,7 @@ label {
 
 label {
     text = cmd[update:0:1] echo $(date +"%A, %d %B")
-    color = rgb(e6eaea)
+    color = rgb(ffffff)
     font_size = 40
     font_family = Inter Medium
 
@@ -37,12 +37,12 @@ label {
 
 input-field {
     dots_size = 0.33
-    outer_color = rgb(1d3337)
-    inner_color = rgb(152528)
-    font_color = rgb(587b7b)
+    outer_color = rgb(232533)
+    inner_color = rgb(1a1b26)
+    font_color = rgb(a9b1d6)
     placeholder_text =
-    check_color = rgb(fda47f)
-    fail_color = rgb(e85c51)
+    check_color = rgb(e0af68)
+    fail_color = rgb(f7768e)
     fail_text =
 
     size = 300, 100
