--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -27,8 +27,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgb(fda47f)
-    col.inactive_border = rgb(1d3337)
+    col.active_border = rgb(27a1b9)
+    col.inactive_border = rgb(292e42)
 
     layout = master
 }
