--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -1,27 +1,35 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <!-- Configuración para sans-serif -->
+  <!-- Configuration for the sans-serif font family -->
   <match target="pattern">
+    <!-- Check if the font family requested is "sans-serif" -->
     <test name="family" compare="eq">
       <string>sans-serif</string>
     </test>
+    <!-- Replace the default "sans-serif" font with "Inter Variable" -->
     <edit name="family" mode="assign" binding="strong">
       <string>Inter Variable</string>
     </edit>
+    <!-- Append "Noto Sans" as a fallback font for "sans-serif" -->
     <edit name="family" mode="append" binding="strong">
       <string>Noto Sans</string>
     </edit>
   </match>
 
-  <!-- Configuración para monospace -->
+  <!-- Configuration for the monospace font family -->
   <match target="pattern">
+    <!-- Check if the font family requested is "monospace" -->
     <test name="family" compare="eq">
       <string>monospace</string>
     </test>
+    <!-- Replace the default "monospace" font with "JetBrains Mono" -->
     <edit name="family" mode="assign" binding="strong">
       <string>JetBrains Mono</string>
     </edit>
+    <!-- Append fallback fonts for "monospace":
+         - "Noto Sans Mono" as a general-purpose monospace font
+         - "Symbols Nerd Font" for symbols or icon-like characters -->
     <edit name="family" mode="append" binding="strong">
       <string>Noto Sans Mono</string>
       <string>Symbols Nerd Font</string>
