--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,10 +1,11 @@
 # Shell
-shell fish
+# shell /home/warbacon/.local/bin/fish
 
 # General
 mouse_hide_wait 0
 strip_trailing_spaces always
 placement_strategy top-left
+notify_on_cmd_finish invisible 10.0
 
 # Font
 font_family JetBrains Mono
