--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -1,22 +1,15 @@
 [manager]
 show_hidden = true
 sort_by = "natural"
+sort_translit = false
 
 [preview]
-tab_size   = 2
-max_width  = 1000
+tab_size = 4
+max_width = 1000
 max_height = 1000
 
 [opener]
-edit = [
-	{ run = 'nvim "$@"', block = true, for = "unix" },
-	{ run = "nvim %*",   block = true, for = "windows" },
-]
-play = [
-	{ run = 'mpv "$@"', orphan = true, for = "unix" },
-	{ run = 'mpv.exe %*', orphan = true, for = "windows" }
-]
 open = [
-    { run = 'xdg-open "$@"', orphan = true, desc = "Open", for ="linux" },
-    { run = "start %*", orphan = true, desc = "Open", for ="windows" }
+	{ run = 'xdg-open "$1"', orphan = true, desc = "Open", for = "linux" },
+	{ run = 'start "" "%1"', orphan = true, desc = "Open", for = "windows" },
 ]
