--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,8 +22,8 @@ env = QT_QPA_PLATFORMTHEME,qt5ct
 # LOOK AND FEEL ================================================================
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 3
+    gaps_out = 6
 
     border_size = 2
 
@@ -91,7 +91,7 @@ misc {
     disable_hyprland_logo = true
     focus_on_activate = true
     new_window_takes_over_fullscreen = 2
-    background_color = 0x000000
+    background_color = rgb(000000)
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#xwayland
@@ -206,6 +206,9 @@ windowrulev2 = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+
+windowrulev2 = noborder,class:(GTK Application),floating:1
+
 # Smart gaps
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
@@ -213,3 +216,5 @@ windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
+layerrule = animation slide left, rofi
