--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -19,6 +19,10 @@
 
   <!-- Configuration for the monospace font family -->
   <match target="pattern">
+    <!-- Check if the program is NOT ghostty -->
+    <test name="prgname" compare="not_eq">
+      <string>ghostty</string>
+    </test>
     <!-- Check if the font family requested is "monospace" -->
     <test name="family" compare="eq">
       <string>monospace</string>
@@ -28,12 +32,11 @@
       <string>JetBrains Mono</string>
     </edit>
     <!-- Append fallback fonts for "monospace":
-         - "Noto Sans Mono" as a general-purpose monospace font
-         - "Symbols Nerd Font" for symbols or icon-like characters -->
+    - "Noto Sans Mono" as a general-purpose monospace font
+    - "Symbols Nerd Font" for symbols and icons -->
     <edit name="family" mode="append" binding="strong">
       <string>Noto Sans Mono</string>
       <string>Symbols Nerd Font</string>
     </edit>
   </match>
 </fontconfig>
-
