--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 # MONITORS: https://wiki.hyprland.org/Configuring/Monitors =====================
-monitor=,preferred,auto,auto
-monitor=desc:LG Electronics LG ULTRAGEAR 102NTZNG9205,preferred,auto-up,auto
+monitor = eDP-1, preferred, auto, 2
+monitor = desc:LG Electronics LG ULTRAGEAR 102NTZNG9205, preferred, auto-up, auto
+monitor = , preferred, auto, auto
 
 # PROGRAMS =====================================================================
 $terminal = kitty -1
@@ -12,12 +13,7 @@ exec-once = hyprpaper &
 exec-once = waybar &
 exec-once = hypridle &
 exec-once = wl-clip-persist --clipboard regular &
-
-# ENV VARIABLES ================================================================
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = GDK_SCALE,2
-env = QT_QPA_PLATFORMTHEME,qt5ct
+exec-once = systemctl --user start hyprpolkitagent
 
 # LOOK AND FEEL ================================================================
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#general
@@ -184,10 +180,6 @@ bind = SUPER SHIFT, 8, movetoworkspace, 8
 bind = SUPER SHIFT, 9, movetoworkspace, 9
 bind = SUPER SHIFT, 0, movetoworkspace, 10
 
-# Special workspace
-bind = SUPER, S, togglespecialworkspace, magic
-bind = SUPER SHIFT, S, movetoworkspace, special:magic
-
 # Scroll through existing workspaces with mainMod + scroll
 bind = SUPER, mouse_down, workspace, e+1
 bind = SUPER, mouse_up, workspace, e-1
@@ -205,9 +197,6 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-
-windowrulev2 = noborder,class:(GTK Application),floating:1
 
 # Smart gaps
 workspace = w[tv1], gapsout:0, gapsin:0
