--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,17 +1,15 @@
 # Shell
-# shell /home/warbacon/.local/bin/fish
+shell /home/warbacon/.local/bin/fish
 
 # General
-mouse_hide_wait 0
+mouse_hide_wait -1
 strip_trailing_spaces always
-placement_strategy top-left
 notify_on_cmd_finish invisible 10.0
 
 # Font
-font_family JetBrains Mono
-modify_font cell_height 10px
-modify_font strikethrough_position 5px
-font_size 14.4
+modify_font cell_height 14px
+modify_font strikethrough_position 8px
+font_size 14
 disable_ligatures cursor
 undercurl_style thick-sparse
 
@@ -20,12 +18,10 @@ wayland_enable_ime no
 
 # Tabs
 tab_bar_edge        top
-tab_bar_align       center
-tab_bar_style       fade
-tab_fade            1
-tab_title_template  "{index}:{title}"
+tab_bar_style       powerline
+# tab_title_template  "{index}:{title}"
 
-# Maps
+# Mappings
 map ctrl+shift+d new_tab_with_cwd
 
 map ctrl+0 change_font_size current 0
