--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,13 +6,14 @@ monitor = , preferred, auto, auto
 # PROGRAMS =====================================================================
 $terminal = kitty -1
 $fileManager = $terminal -e yazi
-$menu = rofi -show drun -show-icons
+$menu = walker -m applications
 
 # AUTOSTART ====================================================================
-exec-once = hyprpaper &
-exec-once = waybar &
-exec-once = hypridle &
-exec-once = wl-clip-persist --clipboard regular &
+exec-once = hyprpaper
+exec-once = waybar
+exec-once = hypridle
+exec-once = wl-clip-persist --clipboard regular
+exec-once = walker --gapplication-service  # Has memory leaks at the moment
 exec-once = systemctl --user start hyprpolkitagent
 
 # LOOK AND FEEL ================================================================
@@ -32,6 +33,7 @@ general {
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 6
+    rounding_power = 4
 
     # wiki: https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -69,9 +71,7 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 3, easeOutQuint, slidefade 20%
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Master-Layout
@@ -115,13 +115,24 @@ input {
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
-    workspace_swipe_cancel_ratio = 0.15
+    workspace_swipe_cancel_ratio = 0.1
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#per-device-input-config
 device {
     name = asue140d:00-04f3:31b9-touchpad
     accel_profile = adaptive
+}
+
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#binds
+binds {
+    allow_pin_fullscreen = true
+    scroll_event_delay = 100
+}
+
+ecosystem {
+    no_donation_nag = true
+    no_update_news = true
 }
 
 # KEYBINDINGS: https://wiki.hyprland.org/Configuring/Binds =====================
@@ -133,8 +144,9 @@ bind = SUPER, E, exec, $fileManager
 bind = SUPER, Space, togglefloating,
 bind = SUPER, R, exec, $menu
 bind = SUPER, F, fullscreen, 0
-bind = SUPER, period, exec, rofimoji -r Emojis
-bind = SUPER, P, exec, ~/.config/hypr/scripts/command_palette.sh
+bind = SUPER, period, exec, walker -m emojis
+bind = SUPER, V, exec, walker -m clipboard
+bind = SUPER, P, exec, walker -m custom_commands -k
 bind = , Print, exec, grim - | wl-copy
 bind = SHIFT, Print, exec, grim -g "$(slurp -b 00000077 -w 0 || echo)" - | wl-copy
 
@@ -181,8 +193,8 @@ bind = SUPER SHIFT, 9, movetoworkspace, 9
 bind = SUPER SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = SUPER, mouse_down, workspace, e+1
-bind = SUPER, mouse_up, workspace, e-1
+bind = SUPER, mouse_down, workspace, e-1
+bind = SUPER, mouse_up, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
@@ -198,6 +210,14 @@ windowrulev2 = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+# Firefox Picture-in-Picture
+windowrulev2 = float, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrulev2 = pin, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrulev2 = keepaspectratio, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrulev2 = suppressevent activate, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrulev2 = suppressevent fullscreen, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrulev2 = size 512 288, initialTitle:Picture-in-Picture, initialClass:firefox
+
 # Smart gaps
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
@@ -207,3 +227,5 @@ windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 layerrule = animation slide left, rofi
+layerrule = animation popin 95%, walker
+layerrule = animation popin 95%, launcher
