--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -4,49 +4,44 @@ general {
 
 background {
     path = ~/.config/hypr/wallpaper.png
-
-    brightness = 0.6
     blur_passes = 4
+    brightness = 0.75
 }
 
 label {
-    text = cmd[update:1000] echo -e "$(date +'%H:%M')"
-    color = rgb(ffffff)
-    font_size = 150
+    text = cmd[update:0:1] echo $(date +"%A, %d de %B")
+    color = rgba(255,255,255,0.5)
+    font_size = 40
     font_family = Inter Medium
 
     position = 0, -250
     halign = center
     valign = top
-    shadow_passes = 2
-    shadow_boost = 0.75
 }
 
 label {
-    text = cmd[update:0:1] echo $(date +"%A, %d %B")
-    color = rgb(ffffff)
-    font_size = 40
-    font_family = Inter Medium
+    text = $TIME
+    color = rgba(255,255,255,0.5)
+    font_size = 175
+    font_family = Inter Bold
 
-    position = 0, -500
+    position = 0, -300
     halign = center
     valign = top
-    shadow_passes = 2
-    shadow_boost = 0.75
 }
 
 input-field {
-    dots_size = 0.33
-    outer_color = rgb(232533)
-    inner_color = rgb(1a1b26)
-    font_color = rgb(a9b1d6)
+    dots_size = 0.3
+    outer_color = rgba(255,255,255,0.1)
+    inner_color = rgba(25,25,25,0.5)
+    font_color = rgba(255,255,255,0.5)
     placeholder_text =
-    check_color = rgb(e0af68)
-    fail_color = rgb(f7768e)
     fail_text =
+    check_color = rgb(f6c177)
+    fail_color = rgb(eb6f92)
 
     size = 300, 100
-    position = 0, 200
+    position = 0, 150
     halign = center
     valign = bottom
 }
