--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -1,42 +1,41 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-  <!-- Configuration for the sans-serif font family -->
-  <match target="pattern">
-    <!-- Check if the font family requested is "sans-serif" -->
-    <test name="family" compare="eq">
-      <string>sans-serif</string>
-    </test>
-    <!-- Replace the default "sans-serif" font with "Inter Variable" -->
-    <edit name="family" mode="assign" binding="strong">
-      <string>Inter Variable</string>
-    </edit>
-    <!-- Append "Noto Sans" as a fallback font for "sans-serif" -->
-    <edit name="family" mode="append" binding="strong">
-      <string>Noto Sans</string>
-    </edit>
-  </match>
-
-  <!-- Configuration for the monospace font family -->
-  <match target="pattern">
-    <!-- Check if the program is NOT ghostty -->
-    <test name="prgname" compare="not_eq">
-      <string>ghostty</string>
-    </test>
-    <!-- Check if the font family requested is "monospace" -->
-    <test name="family" compare="eq">
-      <string>monospace</string>
-    </test>
-    <!-- Replace the default "monospace" font with "JetBrains Mono" -->
-    <edit name="family" mode="assign" binding="strong">
-      <string>JetBrains Mono</string>
-    </edit>
-    <!-- Append fallback fonts for "monospace":
+ <!-- Configuration for the sans-serif font family -->
+ <match target="pattern">
+  <!-- Check if the font family requested is "sans-serif" -->
+  <test compare="eq" name="family">
+   <string>sans-serif</string>
+  </test>
+  <!-- Replace the default "sans-serif" font with "Inter Variable" -->
+  <edit binding="strong" mode="assign" name="family">
+   <string>Inter Variable</string>
+  </edit>
+  <!-- Append "Noto Sans" as a fallback font for "sans-serif" -->
+  <edit binding="strong" mode="append" name="family">
+   <string>Noto Sans</string>
+  </edit>
+ </match>
+ <!-- Configuration for the monospace font family -->
+ <match target="pattern">
+  <!-- Check if the program is NOT ghostty -->
+  <test compare="not_eq" name="prgname">
+   <string>ghostty</string>
+  </test>
+  <!-- Check if the font family requested is "monospace" -->
+  <test compare="eq" name="family">
+   <string>monospace</string>
+  </test>
+  <!-- Replace the default "monospace" font with "JetBrains Mono" -->
+  <edit binding="strong" mode="assign" name="family">
+   <string>JetBrains Mono</string>
+  </edit>
+  <!-- Append fallback fonts for "monospace":
     - "Noto Sans Mono" as a general-purpose monospace font
     - "Symbols Nerd Font" for symbols and icons -->
-    <edit name="family" mode="append" binding="strong">
-      <string>Noto Sans Mono</string>
-      <string>Symbols Nerd Font</string>
-    </edit>
-  </match>
+  <edit binding="strong" mode="append" name="family">
+   <string>Noto Sans Mono</string>
+   <string>Symbols Nerd Font</string>
+  </edit>
+ </match>
 </fontconfig>
