--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,9 +7,10 @@ strip_trailing_spaces always
 notify_on_cmd_finish invisible 10.0
 
 # Font
+font_family JetBrains Mono
+font_size 14
 modify_font cell_height 14px
 modify_font strikethrough_position 8px
-font_size 14
 disable_ligatures cursor
 undercurl_style thick-sparse
 
@@ -19,7 +20,11 @@ wayland_enable_ime no
 # Tabs
 tab_bar_edge        top
 tab_bar_style       powerline
-# tab_title_template  "{index}:{title}"
+tab_title_template  "{index}:{title}"
+
+remember_window_size  no
+initial_window_width  1200
+initial_window_height 650
 
 # Mappings
 map ctrl+shift+d new_tab_with_cwd
@@ -44,6 +49,13 @@ map alt+9 goto_tab 9
 map alt+0 goto_tab 10
 
 mouse_map alt+left press ungrabbed mouse_selection rectangle
+
+enabled_layouts fat,stack
+
+map ctrl+alt+k neighboring_window up
+map ctrl+alt+l neighboring_window right
+map ctrl+alt+j neighboring_window down
+map ctrl+alt+h neighboring_window left
 
 # Theme
 include ./Tokyo Night.conf
