--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -7,3 +7,6 @@ style=Fusion
 [Fonts]
 fixed="Monospace,10,-1,5,50,0,0,0,0,0"
 general="Sans Serif,10,-1,5,50,0,0,0,0,0"
+
+[SettingsWindow]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x2\xc2\0\0\x3K\0\0\0\0\0\0\0\0\0\0\x5\x9f\0\0\x3[\0\0\0\0\x2\0\0\0\x5\xa0\0\0\0\0\0\0\0\0\0\0\x2\xc2\0\0\x3K)
