--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Shell
-set -g default-shell /usr/bin/fish
+set -g default-shell ~/.local/bin/fish
 
 # Reload
 bind r 'source-file ~/.config/tmux/tmux.conf; display-message "Config reloaded!"'
@@ -24,10 +24,6 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::::%p1%{65536}%/%d::%p1%{256}%/%{
 
 # Keys
 set -g mode-keys vi
-
-set -g prefix C-a
-bind-key C-a send-prefix
-unbind C-b
 
 bind-key -n M-1 selectw -t 1
 bind-key -n M-2 selectw -t 2
